# Tan

./: .gitignore  CMakeLists.txt  README.md
Driver/: Chess.c  Driver.c  Game.c  Game.h  Human.c
Driver/Include/: Driver.h  Human.h  StringConstants.h
Game/: Game.c
Game/Include/: Game.h
Shared/: Elements.h
